--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     section h1 { font-size: 3rem; margin-bottom: 1rem; color: #00ffe0; }
     section p { font-size: 1.2rem; max-width: 600px; line-height: 1.5; }
 
-    /* Botón con gradiente Solana */
+    /* Botón gradiente Solana */
     .btn {
       margin-top: 2rem;
       padding: 0.8rem 2rem;
@@ -125,6 +125,30 @@
       margin-left: 10px;
       vertical-align: middle;
     }
+
+    /* Roadmap */
+    #roadmap .roadmap-container {
+      max-width: 800px;
+      margin-top: 2rem;
+      display: flex;
+      flex-direction: column;
+      gap: 2rem;
+    }
+    #roadmap .step {
+      padding: 1.5rem;
+      background: #1a1a2e;
+      border-left: 5px solid #14F195;
+      border-radius: 10px;
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+    }
+    #roadmap .step:hover {
+      transform: translateX(10px);
+      box-shadow: 0 0 15px #14F195;
+    }
+    #roadmap h2 {
+      color: #14F195;
+      margin-bottom: 0.5rem;
+    }
   </style>
 </head>
 <body>
@@ -135,7 +159,7 @@
     <nav id="menu">
       <a href="#inicio">Inicio</a>
       <a href="#features">Características</a>
-      <a href="#tokenomics">Tokenomics</a>
+      <a href="#roadmap">Roadmap</a>
       <a href="#solana">Solana</a>
       <a href="#contacto">Contacto</a>
     </nav>
@@ -164,18 +188,36 @@
     </div>
   </section>
 
-  <!-- Sección Tokenomics -->
-  <section id="tokenomics">
-    <h1>Tokenomics</h1>
-    <p>Suministro total: 1,000,000 NC <br>
-       Cada transacción fortalece la red y premia a los holders. <br>
-       Token estándar SPL en la red Solana.</p>
+  <!-- Sección Roadmap -->
+  <section id="roadmap">
+    <h1>Roadmap</h1>
+    <div class="roadmap-container">
+      <div class="step">
+        <h2>Q1 – Lanzamiento</h2>
+        <p>Creación del token SPL en Solana, web oficial y primera comunidad.</p>
+      </div>
+
+      <div class="step">
+        <h2>Q2 – Expansión</h2>
+        <p>Listados en DEX, marketing y primeras colaboraciones.</p>
+      </div>
+
+      <div class="step">
+        <h2>Q3 – Ecosistema</h2>
+        <p>Staking, utilidades internas y nuevas funciones Web3.</p>
+      </div>
+
+      <div class="step">
+        <h2>Q4 – Metaverso</h2>
+        <p>Integraciones Web3, NFTs y experiencias inmersivas.</p>
+      </div>
+    </div>
   </section>
 
   <!-- Sección Solana -->
   <section id="solana">
     <h1>Red Solana <img src="https://cryptologos.cc/logos/solana-sol-logo.png" class="solana-icon" alt="Solana"></h1>
-    <p>NovaCoin aprovechará la velocidad y eficiencia de Solana. Transacciones rápidas, tarifas mínimas y seguridad de nivel blockchain de última generación.</p>
+    <p>NovaCoin aprovechará la velocidad y eficiencia de Solana. Transacciones rápidas, tarifas mínimas y seguridad de nivel blockchain.</p>
     <button class="btn">Conseguir NovaCoin</button>
     <div class="slider">
       <div class="card">Transacciones <strong>rápidas</strong></div>
@@ -188,7 +230,7 @@
   <!-- Sección Contacto -->
   <section id="contacto">
     <h1>Contacto</h1>
-    <p>¿Tienes preguntas o quieres unirte a nuestra comunidad? Escríbenos.</p>
+    <p>¿Tienes preguntas o quieres unirte a la comunidad? Escríbenos.</p>
     <button class="btn">Contactar</button>
   </section>
 
@@ -198,10 +240,9 @@
     const menu = document.getElementById('menu');
     hamburger.addEventListener('click', () => {
       menu.classList.toggle('active');
-      hamburger.classList.toggle('open');
     });
 
-    // Animación al hacer scroll
+    // Animación scroll
     const sections = document.querySelectorAll('section');
     window.addEventListener('scroll', () => {
       sections.forEach(sec => {
@@ -211,7 +252,6 @@
         }
       });
 
-      // Cambiar fondo header al hacer scroll
       const header = document.querySelector('header');
       if(window.scrollY > 50) header.classList.add('scrolled');
       else header.classList.remove('scrolled');
